[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-mimir"
version = "0.1.0"
authors = [
    { name = "Perseus Computing LLC", email = "hermes@perseus.observer" },
]
description = "Mimir persistent, local, encrypted memory for LangChain — tools and a retriever backed by the Mimir MCP engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["langchain", "mimir", "memory", "mcp", "retriever", "agents", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/langchain-mimir"
Repository = "https://github.com/Perseus-Computing-LLC/langchain-mimir"
"Bug Tracker" = "https://github.com/Perseus-Computing-LLC/langchain-mimir/issues"
Mimir = "https://github.com/Perseus-Computing-LLC/mimir"

[tool.hatch.build.targets.wheel]
packages = ["langchain_mimir"]
